a1/brendan_gordon/TEST_PROGRAMS/invalidtype/ethan_macdonald/float_while.min
var x: float;

while x do 
	x = x + 1.0;
done #Error: While condition must be of type int
